--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack",
-    "test": "jest --config=jest.config.json --watchAll"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "test": "jest --config=jest.config.json --watchAll",
+    "serve": "live-server public/"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +24,8 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
+    "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.11.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
