--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "test": "jest --config=jest.config.json --watchAll",
-    "serve": "live-server public/",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -22,12 +21,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
-    "jest": "^26.4.2",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.11.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -39,15 +33,19 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "uuid": "^8.3.0",
-    "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^26.4.2",
+    "react-test-renderer": "^16.13.1",
+    "webpack-dev-server": "^3.11.0"
   }
 }
