--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
-    "test": "jest --config=jest.config.json --watchAll",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -22,6 +22,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "express": "^4.17.1",
+    "firebase": "^7.19.1",
     "mini-css-extract-plugin": "^0.11.0",
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
@@ -35,18 +36,22 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
     "uuid": "^8.3.0",
     "webpack": "^4.44.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "enzyme-to-json": "^3.5.0",
     "jest": "^26.4.2",
     "react-test-renderer": "^16.13.1",
+    "redux-mock-store": "^1.5.4",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
